--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id("com.apollographql.apollo").version("2.5.6")
 }
 
 android {
@@ -37,6 +38,10 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
+    apollo {
+        // instruct the compiler to generate Kotlin models
+        generateKotlinModels.set(true)
+    }
 }
 
 dependencies {
@@ -55,12 +60,18 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.1'
 
+
     //networking
     implementation("com.squareup.retrofit2:retrofit:2.9.0")
     implementation("com.squareup.retrofit2:converter-gson:2.7.2")
     implementation("com.google.code.gson:gson:2.8.6")
     implementation("com.squareup.okhttp3:okhttp:4.9.1")
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.1")
+
+    implementation("com.apollographql.apollo:apollo-runtime:2.5.6")
+    implementation("com.apollographql.apollo:apollo-normalized-cache-sqlite:2.5.6")
+    implementation("com.apollographql.apollo:apollo-coroutines-support:2.5.6")
+
 
     //testing
     testImplementation 'junit:junit:4.13.2'
