--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
     id("com.apollographql.apollo").version("2.5.6")
 }
 
@@ -54,7 +55,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
-    implementation "androidx.fragment:fragment-ktx:1.3.3"
+    implementation "androidx.fragment:fragment-ktx:1.3.2"
     implementation "androidx.activity:activity-ktx:1.2.2"
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -91,6 +92,7 @@ dependencies {
 
     //ui
     implementation ("com.github.bumptech.glide:glide:4.11.0")
+    implementation ("com.github.idanatz:OneAdapter:2.1.0")
 
     //logging
     implementation 'com.jakewharton.timber:timber:4.7.1'
