--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,14 +63,17 @@ dependencies {
 
 
     //networking
-    implementation("com.squareup.retrofit2:retrofit:2.9.0")
-    implementation("com.squareup.retrofit2:converter-gson:2.7.2")
+    implementation("com.squareup.okhttp3:okhttp:4.9.1")
+//    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+//    implementation("com.squareup.retrofit2:converter-gson:2.7.2")
     implementation("com.google.code.gson:gson:2.8.6")
     implementation("com.squareup.okhttp3:okhttp:4.9.1")
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.1")
 
-    implementation("com.apollographql.apollo:apollo-runtime:2.5.6")
-    implementation("com.apollographql.apollo:apollo-normalized-cache-sqlite:2.5.6")
+    implementation("com.apollographql.apollo:apollo-runtime:2.5.6"){
+        exclude group: "com.squareup.*"
+    }
+//    implementation("com.apollographql.apollo:apollo-normalized-cache-sqlite:2.5.6")
     implementation("com.apollographql.apollo:apollo-coroutines-support:2.5.6")
 
 
