get rid of some hard coded values and adding some method documentations

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,6 @@ dependencies {
 
     //networking
     implementation("com.squareup.okhttp3:okhttp:4.9.1")
-//    implementation("com.squareup.retrofit2:retrofit:2.9.0")
-//    implementation("com.squareup.retrofit2:converter-gson:2.7.2")
     implementation("com.google.code.gson:gson:2.8.6")
     implementation("com.squareup.okhttp3:okhttp:4.9.1")
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.1")
@@ -73,7 +71,6 @@ dependencies {
     implementation("com.apollographql.apollo:apollo-runtime:2.5.6"){
         exclude group: "com.squareup.*"
     }
-//    implementation("com.apollographql.apollo:apollo-normalized-cache-sqlite:2.5.6")
     implementation("com.apollographql.apollo:apollo-coroutines-support:2.5.6")
 
 
@@ -92,6 +89,8 @@ dependencies {
     // androidTestImplementation for Android instrumentation tests
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1"
 
+    //security
+    implementation ("androidx.security:security-crypto:1.1.0-alpha03")
 
     //ui
     implementation ("com.github.bumptech.glide:glide:4.11.0")
