--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,18 @@ android {
         maven { url "http://jitpack.io/" }
     }
     testOptions {
-        unitTests.returnDefaultValues = true
+        unitTests {
+            returnDefaultValues = true
+            includeAndroidResources = true
+        }
     }
     apollo {
         // instruct the compiler to generate Kotlin models
         generateKotlinModels.set(true)
+    }
+    packagingOptions {
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
     }
 }
 
@@ -82,6 +89,7 @@ dependencies {
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
     testImplementation "org.mockito:mockito-core:3.6.28"
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    debugImplementation "androidx.fragment:fragment-testing:1.3.3"
 
     // testImplementation for pure JVM unit tests
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1"
